--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     #main-header{
       text-align:center;
       background-color:rgb(0,106,121);
-       color :white;
+       color :red;
        padding:20px;   
 }
        #main-footer{
