--- a/art.html
+++ b/art.html
@@ -26,7 +26,7 @@
 	 <div class="container">
    <section id="main">
  	 
-         <h1><strong>Art </strong>  is a diverse range of human activities involving the creation of visual, auditory or performing artifacts (artworks), which express the creator's imagination, conceptual ideas, or technical skill, intended to be appreciated primarily for their beauty or emotional power. Other activities related to the production of works of art include art criticism and the history of art.
+         <p><strong>Art </strong> is a diverse range of human activities involving the creation of visual, auditory or performing artifacts (artworks), which express the creator's imagination, conceptual ideas, or technical skill, intended to be appreciated primarily for their beauty or emotional power. Other activities related to the production of works of art include art criticism and the history of art.
 
 The three classical branches of visual art are painting, sculpture and architecture. <em>Music, theatre, film, dance, and other performing arts,</em> as well as literature and other media such as interactive media, are included in a broader definition of the arts. Until the 17th century, art referred to any skill or mastery and was not differentiated from crafts or sciences. In modern usage after the 17th century, where aesthetic considerations are paramount, the fine arts are separated and distinguished from acquired skills in general, such as the decorative or applied arts.</h1>
            <img src="image.jpg"></img
