--- a/art.html
+++ b/art.html
@@ -24,7 +24,7 @@
  </nav>
  
 	 <div class="container">
-   <section id="main">
+   <section id="para">
  	 
          <p style="color:black;"><strong>Art </strong> is a diverse range of human activities involving the creation of visual, auditory or performing artifacts (artworks), which express the creator's imagination, conceptual ideas, or technical skill, intended to be appreciated primarily for their beauty or emotional power. Other activities related to the production of works of art include art criticism and the history of art.
 
